--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
     <head>
-        <title>Otsikko</title>
+        <title>Muistilistasovellus</title>
         <meta charset="utf-8" />
     </head>
 
     <body>
-        <h1>Hei maailma!</h1>
+        <h1>Muistilista</h1>
 
     </body>
 </html>
