--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -3,7 +3,7 @@
     <head>
         <title>Muistilista</title>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" type="text/css" href="tyylit.css">
+        <link rel="stylesheet" type="text/css" href="tyylit.css"/>
     </head>
     
     
