--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -3,13 +3,13 @@
     <head>
         <title>Muistilista</title>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" type="text/css" href="/tyylit.css"/>
+        <link rel="stylesheet" type="text/css" href="tyylit.css"/>
     </head>
     
     
     <ul>
-        <li><a href="index.html">Etusivu</a></li>
-        <li><a href="lista.html">Muistilista</a></li>
-        <li style="float:right"><a href="login.html">Kirjaudu</a></li>
+        <li><a href="/index">Etusivu</a></li>
+        <li><a href="/lista">Muistilista</a></li>
+        <li style="float:right"><a href="/login">Kirjaudu</a></li>
     </ul>
 </html>
