--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Muistilistasovellus</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" type="text/css" href="tyylit.css"/>
+        <link rel="stylesheet" type="text/css" href="tyylit.css" th:href="@{tyylit.css}"/>
     </head>
 
     <body>
