--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
     <head>
         <title>Kirjaudu sisään</title>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" type="text/css" href="tyylit.css" th:href="@{tyylit.css}"/>
+        <link rel="stylesheet" type="text/css" href="tyylit.css" th:href="@{/tyylit.css}"/>
     </head>
     
     <body>
