--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -25,8 +25,7 @@
                 list-style-type: none;
                 margin: 0;
                 padding: 0;
-                background-color: antiquewhite;
-                color: darkolivegreen;
+                background-color: darkgray;
             }
 
             #navi {
@@ -69,6 +68,8 @@
 
             p {
                 background-color: white;
+                padding: 0;
+                margin: 0;
             }
 
             footer {
@@ -109,11 +110,11 @@
     </ul>
     
     <ul class="lista">
-        <li>Listan ensimmäinen asia</li>
-        <li>Listan toinen asia</li>
-        <li>Kolmas asia</li>
-        <li>Neljäs</li>
-        <li>Viides</li>
+        <li><a>Listan ensimmäinen asia</a></li>
+        <li><a>Listan toinen asia</a></li>
+        <li><a>Kolmas asia</a></li>
+        <li><a>Neljäs</a></li>
+        <li><a>Viides</a></li>
     </ul>
     
     <p>Tässä on valitun tehtävän yksityiskohtia tai tarkempi kuvaus</p>
