--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -102,6 +102,7 @@
 
     </head>
     
+    <body>
     
     <ul id="navi">
         <li id="navili"><a href="/index">Etusivu</a></li>
@@ -122,4 +123,6 @@
     <button id="poista">Poista</button>
     
     <footer>TSOHA-muistilista</footer>
+    
+    </body>
 </html>
