--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,7 +75,7 @@
         <ul>
             <li><a href="/index">Etusivu</a></li>
             <li><a href="/lista">Muistilista</a></li>
-            <li style="float:right"><a href="/login">Kirjaudu</a></li>
+            <li style="float:right"><a href="/kirjautuminen">Kirjaudu</a></li>
         </ul>
         
         <h1>Muistilista</h1>
