--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -107,7 +107,7 @@
     <ul id="navi">
         <li id="navili"><a href="/index">Etusivu</a></li>
         <li id="navili"><a href="/lista">Muistilista</a></li>
-        <li id="navili" style="float:right"><a href="/login">Kirjaudu</a></li>
+        <li id="navili" style="float:right"><a href="/kirjautuminen">Kirjaudu</a></li>
     </ul>
     
     <ul class="lista">
