--- a/src/main/resources/templates/kirjautuminen.html
+++ b/src/main/resources/templates/kirjautuminen.html
@@ -74,7 +74,7 @@
         <ul>
             <li><a href="/index">Etusivu</a></li>
             <li><a href="/lista">Muistilista</a></li>
-            <li style="float:right"><a href="/login">Kirjaudu</a></li>
+            <li style="float:right"><a href="/kirjautuminen">Kirjaudu</a></li>
         </ul>
         
         <h2>Kirjaudu sisään</h2>
