--- a/src/main/resources/templates/kirjautuminen.html
+++ b/src/main/resources/templates/kirjautuminen.html
@@ -79,10 +79,10 @@
         
         <h2>Kirjaudu sisään</h2>
         <p>Nimi:</p>
-        <input type="text" name="nimi"><br>
+        <input type="text" name="nimi"/><br/>
         <p>Salasana:</p>
-        <input type="password" name="salasana"><br><br>
-        <input type="submit" value="Kirjaudu">
+        <input type="password" name="salasana"/><br/><br/>
+        <input type="submit" value="Kirjaudu"/>
         
         <footer>TSOHA-muistilista</footer>
     </body>
