--- a/src/main/resources/templates/rekisterointi.html
+++ b/src/main/resources/templates/rekisterointi.html
@@ -77,9 +77,8 @@
             <li style="float:right"><a href="/kirjautuminen">Kirjaudu</a></li>
         </ul>
 
-        <h2>Kirjaudu sisään</h2>
-        <a href="/rekisterointi">Luo tunnus</a>
-        <form action="/login" method="POST">
+        <h2>Luo tunnukset</h2>
+        <form action="/rek" method="POST">
             <p>Nimi:</p>
             <input type="text" name="nimi"/><br/>
             <p>Salasana:</p>
