--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -105,9 +105,9 @@
     <body>
     
     <ul id="navi">
-        <li id="navili"><a href="/index">Etusivu</a></li>
-        <li id="navili"><a href="/lista">Muistilista</a></li>
-        <li id="navili" style="float:right"><a href="/kirjautuminen">Kirjaudu</a></li>
+        <li><a href="/index">Etusivu</a></li>
+        <li><a href="/lista">Muistilista</a></li>
+        <li style="float:right"><a href="/kirjautuminen">Kirjaudu</a></li>
     </ul>
     
     <ul class="lista" th:each="muistettava : ${muistettavat}">
