--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -121,6 +121,7 @@
     <p>Tässä on valitun tehtävän yksityiskohtia tai tarkempi kuvaus</p>
     <button id="muokkaa">Muokkaa</button>
     <button id="poista">Poista</button>
+    <a th:text="${lisaa}"></a>
     
     <footer>TSOHA-muistilista</footer>
     
