--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -121,7 +121,7 @@
     <p>Tässä on valitun tehtävän yksityiskohtia tai tarkempi kuvaus</p>
     <button id="muokkaa">Muokkaa</button>
     <button id="poista">Poista</button>
-    <a th:href="@{/lisaamuistettava}"></a>
+    <!-- <a th:href="/lisaa"></a> -->
     
     <footer>TSOHA-muistilista</footer>
     
