--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -80,7 +80,7 @@
                 background-color: black;
                 color: white;
             }
-            
+
             #poista {
                 background-color: #f44336;
                 border: none;
@@ -89,7 +89,7 @@
                 text-decoration: none;
                 display: inline-block;
             }
-            
+
             #muokkaa {
                 background-color: #008CBA;
                 border: none;
@@ -101,29 +101,31 @@
         </style>
 
     </head>
-    
+
     <body>
-    
-    <ul id="navi">
-        <li><a href="/index">Etusivu</a></li>
-        <li><a href="/lista">Muistilista</a></li>
-        <li style="float:right"><a href="/kirjautuminen">Kirjaudu</a></li>
-    </ul>
-    
-    <ul class="lista" th:each="muistettava : ${muistettavat}">
-        <li><a>Listan ensimmäinen asia</a></li>
-        <li><a>Listan toinen asia</a></li>
-        <li><a>Kolmas asia</a></li>
-        <li><a>Neljäs</a></li>
-        <li><a>Viides</a></li>
-    </ul>
-    
-    <p>Tässä on valitun tehtävän yksityiskohtia tai tarkempi kuvaus</p>
-    <button id="muokkaa">Muokkaa</button>
-    <button id="poista">Poista</button>
-    <!-- <a th:href="/lisaa"></a> -->
-    
-    <footer>TSOHA-muistilista</footer>
-    
+
+        <ul id="navi">
+            <li><a href="/index">Etusivu</a></li>
+            <li><a href="/lista">Muistilista</a></li>
+            <li style="float:right"><a href="/kirjautuminen">Kirjaudu</a></li>
+        </ul>
+
+        <h2 th:text="${kayttaja.nimi}"></h2>
+
+        <ul class="lista" th:each="muistettava : ${muistettavat}">
+            <li><a>Listan ensimmäinen asia</a></li>
+            <li><a>Listan toinen asia</a></li>
+            <li><a>Kolmas asia</a></li>
+            <li><a>Neljäs</a></li>
+            <li><a>Viides</a></li>
+        </ul>
+
+        <p>Tässä on valitun tehtävän yksityiskohtia tai tarkempi kuvaus</p>
+        <button id="muokkaa">Muokkaa</button>
+        <button id="poista">Poista</button>
+        <!-- <a th:href="/lisaa"></a> -->
+
+        <footer>TSOHA-muistilista</footer>
+
     </body>
 </html>
