--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -110,7 +110,7 @@
             <li style="float:right"><a href="/kirjautuminen">Kirjaudu</a></li>
         </ul>
 
-        <h2 th:text="${kayttaja.nimi}"></h2>
+        <h2 th:text="${kayttaja.nimi}">Kayttajan nimi tähän</h2>
 
         <ul class="lista" th:each="muistettava : ${muistettavat}">
             <li><a>Listan ensimmäinen asia</a></li>
