--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -15,6 +15,11 @@
             h1 {
                 text-align: center;
             }
+            
+            h2 {
+                text-align: center;
+                color: white;
+            }
 
             nav {
                 background: -moz-linear-gradient(black, grey);
@@ -85,7 +90,7 @@
                 background-color: #f44336;
                 border: none;
                 color: white;
-                padding: 10px, 14px;
+                padding: 10px 14px;
                 text-decoration: none;
                 display: inline-block;
             }
@@ -94,7 +99,7 @@
                 background-color: #008CBA;
                 border: none;
                 color: white;
-                padding: 10px, 14px;
+                padding: 10px 14px;
                 text-decoration: none;
                 display: inline-block;
             }
