--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -47,7 +47,7 @@
             #navili {
                 float: left;
                 border-right: 1px solid gray;
-                padding: 18px, 18px;
+                padding: 18px 18px;
             }
 
             li:last-child {
