--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -18,6 +18,7 @@
             
             h2 {
                 text-align: center;
+                background-color: blue;
                 color: white;
             }
 
