--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -92,6 +92,7 @@
                 padding: 10px 14px;
                 text-decoration: none;
                 display: inline-block;
+                float:left
             }
 
             #muokkaa {
@@ -101,6 +102,7 @@
                 padding: 10px 14px;
                 text-decoration: none;
                 display: inline-block;
+                float:left
             }
         </style>
 
@@ -123,7 +125,7 @@
             <li><a>Viides</a></li>
         </ul>
 
-        <p>Tässä on valitun tehtävän yksityiskohtia tai tarkempi kuvaus</p>
+        <p style="float:left">Tässä on valitun tehtävän yksityiskohtia tai tarkempi kuvaus</p>
         <button id="muokkaa">Muokkaa</button>
         <button id="poista">Poista</button>
         <!-- <a th:href="/lisaa"></a> -->
