--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -19,11 +19,11 @@
         <table>
             <tr>
                 <td>Ensimmäinen muistettava asia</td>
-                <td><form action="/poista" method="POST"></form></td>
+                <td><form action="/poista" method="POST"></form><input type="submit" value="1"></input></td>
             </tr>
             <tr>
                 <td>Toinen muistettava asia</td>
-                <td><form action="/poista" method="POST"></form></td>
+                <td><form action="/poista" method="POST"></form><input type="submit" value="2"></input></td>
             </tr>
         </table>
 
