--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -27,6 +27,7 @@
             </tr>
         </table>
 
+        <a href="/lisaamuistettava.html">Lisää muistettava</a>
         <p style="float:left">Tässä on valitun tehtävän yksityiskohtia tai tarkempi kuvaus</p>
         <!-- <a th:href="/lisaa"></a> -->
         
