--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -27,7 +27,7 @@
             </tr>
         </table>
 
-        <a href="/lisaam">Lisää muistettava</a>
+        <a href="/lisaamuistettava">Lisää muistettava</a>
         <p style="float:left">Tässä on valitun tehtävän yksityiskohtia tai tarkempi kuvaus</p>
         <!-- <a th:href="/lisaa"></a> -->
         
