--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -20,6 +20,7 @@
             <li th:each="muistettava: ${muistettavat}">
                 <span th:text="${muistettava.nimi}">1</span><span th:text="${muistettava.kuvaus}">Kuvaus tähän</span>
                 <form action="/poista" method="POST"></form><input type="submit" value="Poista"></input>
+                <form action="/muokkaa" method="POST"></form><input type="submit" value="Muokkaa"></input>
             </li>
         </ul>
 
