--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -22,6 +22,7 @@
 
                 <form action="/poista" method="POST">
                     <input type="hidden" th:field="${muistettava.id}" value="Poista"></input>
+                    <button type="submit">Poista</button>
                 </form>
                 <form action="/muokkaa" method="POST"></form><input type="submit" value="Muokkaa"></input>
             </li>
