--- a/src/main/resources/templates/virhe.html
+++ b/src/main/resources/templates/virhe.html
@@ -10,5 +10,6 @@
         </div>
         <a href="/index">Etusivulle</a>
         <a href="/lista">Muistilistaan</a>
+        <a href="/rekisterointi">Rekisteröi tunnus</a>
     </body>
 </html>
